<resources>
    <string name="app_name">YourMealPlanner</string>
    <string name="welcomeLogin">Welcome! Please Login or Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailInput">Email Input</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="continueguest">Continue as a Guest?</string>
    <string name="emailreg">E-mail</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="confirmpasstxt">Confirm Password</string>
    <string name="termofService">I agree to the Tems of Services and Privacy Policy.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="Insiperation">Don\'t Know What To Eat? Here\'s an Inspiration</string>
    <string name="MealOfTheDay">Meal of the Day</string>
    <string name="Inspiration">Inspiration</string>
    <string name="dailyInspiration">"Daily Updated Inspiration "</string>
    <string name="categoriesrtxt">Food Categories</string>
    <string name="addtoFav">Add To Favorits</string>
    <string name="addtoweek">Add To Week Plan</string>
    <string name="Ingredients">Ingredients</string>
    <string name="viewdetails">"View Details "</string>
    <string name="catName">Category Name</string>
    <string name="presstoremove">Press To Remove From Favorite</string>
    <string name="pressRemove">Press To Remove From Favorites</string>
    <string name="removefavbtn">Remove From Favorite</string>
    <string name="steps">Steps</string>
    <string name="searchtitle">Searching For Meals Meals</string>
    <string name="searchcountry">Search By Country</string>
    <string name="searchingredient">Search By Ingredient</string>
    <string name="searchCategory">Search By Category</string>
    <string name="countryname">Country Name</string>
    <string name="clearweekday">Clear From Weekly Plan</string>
    <string name="nonetwork">No Network ?</string>
    <string name="network">No Network Connection?</string>
    <string name="clear">Clear From Plan</string>
    <string name="shoopinglist">Show My Shopping List</string>

    <string-array name="meal_types">
        <item>Main Dish</item>
        <item>Side Dish</item>
        <item>Dessert</item>
    </string-array>
</resources>