<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7D1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/emailreg"
        android:textColor="#42b3f5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtRegEmail"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/password"
        android:textColor="#42b3f5"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegEmail" />

    <EditText
        android:id="@+id/edtTxtRegPass"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/confirmpass"
        android:textColor="#42b3f5"
        app:layout_constraintStart_toStartOf="@+id/edtTxtRegPass"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegPass" />

    <EditText
        android:id="@+id/edtTxtRegConPass"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/confirmpasstxt"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/btnRegRegister"
        android:layout_width="234dp"
        android:layout_height="63dp"
        android:layout_marginTop="59dp"
        android:backgroundTint="#FFF7D1"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegConPass"
        app:srcCompat="@drawable/registerbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>