<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".details.view.Details">

        <!-- Meal Image -->

        <!-- Meal Name -->

        <!-- YouTube Video Player -->
        <TextView
            android:id="@+id/meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dummy Data" />

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="419dp"
            android:layout_height="170dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/meal_name"
            app:srcCompat="@drawable/ic_launcher_background" />

        <!-- More Details Title -->
        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meal_image" />

        <TextView
            android:id="@+id/txtIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/Ingredients"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webView" />

        <!-- Details Text -->
        <TextView
            android:id="@+id/txtIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIngredients"
            tools:text="Dummy Details" />

        <Button
            android:id="@+id/btnFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#009688"
            android:text="@string/addtoFav"
            app:layout_constraintEnd_toStartOf="@+id/btnWeek"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIngredient" />

        <Button
            android:id="@+id/btnWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#009688"
            android:text="@string/addtoweek"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnFav"
            app:layout_constraintTop_toTopOf="@+id/btnFav" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
